--- a/JENKINSFILE
+++ b/JENKINSFILE
@@ -1,52 +1,61 @@
+@ -0,0 +1,61 @@
 pipeline {
     agent any
 
-     stages {
+    stages {
         stage('Get Code') {
             steps {
                 // Obtener código del repo
-                git 'https://github.com/anieto-unir/helloworld.git'
+                git 'https://github.com/rokitocri/CP1_A.git'
             }
         }
-    
-        stage('Build') {
-           steps {
-              echo 'Eyyy, esto es Python. No hay que compilar nada!!!'
-	          echo WORKSPACE
-              bat 'dir'
-           }
-        }
+
         
         stage('Unit') {
             steps {
                 catchError(buildResult: 'UNSTABLE', stageResult: 'FAILURE') {
                     bat '''
                         set PYTHONPATH=%WORKSPACE%
-                        pytest --junitxml=result-unit.xml test\\unit
+                        "C:\\Users\\Cristina\\AppData\\Local\\Programs\\Python\\Python312\\Scripts\\pytest" --junitxml=result-unit.xml test\\unit
                     '''
-               }
+                }
             }
-        }   
-
+        }
 
         stage('Rest') {
-            steps {
-                bat '''
-                    set FLASK_APP=app\\api.py
-                    set FLASK_ENV=development
-                    start flask run
-                    start java -jar C:\\Unir\\Ejercicios\\wiremock\\wiremock-jre8-standalone-2.28.0.jar --port 9090 --root-dir C:\\Unir\\Ejercicios\\wiremock
-                    set PYTHONPATH=%WORKSPACE%
-                    pytest --junitxml=result-rest.xml test\\rest
-                '''
-            }    
-        }
-
+                    steps {
+                        // Iniciar Flask en segundo plano
+                            bat '''
+                                set FLASK_APP=app\\api2.py
+                                set FLASK_ENV=development
+                                start /B cmd /c "C:\\Users\\Cristina\\AppData\\Local\\Programs\\Python\\Python312\\Scripts\\flask.exe" run
+                            '''
+                    
+                            // Iniciar WireMock en otro comando
+                            bat 'start /B java -jar C:\\Users\\Cristina\\Documents\\Master_Devops\\WireMock\\wiremock-standalone-3.3.1.jar --port 9090 --root-dir C:\\Users\\Cristina\\Documents\\Master_Devops\\WireMock'
+                        
+                        
+                        // Esperar un tiempo para permitir que Flask y WireMock se inicien
+                        bat 'ping 127.0.0.1 -n 11 > nul' // Espera aproximadamente 10 segundos
+                        
+                        // Ejecutar pruebas de REST una vez que los servicios estén activos
+                        bat '''
+                            echo %WORKSPACE%
+                            set PYTHONPATH=%WORKSPACE%
+                            dir
+                            "C:\\Users\\Cristina\\AppData\\Local\\Programs\\Python\\Python312\\Scripts\\pytest" --junitxml=result-rest2.xml test\\rest
+                        '''
+                    }
+                }
+                
+               
+            
+        
         stage('Results') {
             steps {
-                junit 'result*.xml' 
+                junit 'result*.xml'
+                bat 'dir'
             }
         }
-     
     }
 }
